RESOLVED FIXED275425
[Site Isolation] Fix custom navigator platform set from website policies
https://bugs.webkit.org/show_bug.cgi?id=275425
Summary [Site Isolation] Fix custom navigator platform set from website policies
Charlie Wolfe
Reported 2024-06-12 17:08:07 PDT
Set custom navigator platform on RemoteFrame and use it when the mainframe is in another process. This matches what we do for other website polices.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-12 17:08:18 PDT
Charlie Wolfe
Comment 2 2024-06-12 17:09:00 PDT
EWS
Comment 3 2024-06-14 14:13:35 PDT
Committed 280038@main (3be5bccc873a): <https://commits.webkit.org/280038@main> Reviewed commits have been landed. Closing PR #29775 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.