[Site Isolation] Fix custom navigator platform set from website policies https://bugs.webkit.org/show_bug.cgi?id=275425 rdar://129721017

Reviewed by Pascoe.

Set custom navigator platform on RemoteFrame and use it when the mainframe is in another process. This
matches what we do for other website polices.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::navigatorPlatform const):
* Source/WebCore/page/Frame.h:
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::customNavigatorPlatform const):
* Source/WebCore/page/LocalFrame.h:
* Source/WebCore/page/RemoteFrame.cpp:
(WebCore::RemoteFrame::customNavigatorPlatform const):
* Source/WebCore/page/RemoteFrame.h:
* Source/WebKit/WebProcess/WebCoreSupport/WebRemoteFrameClient.cpp:
(WebKit::WebRemoteFrameClient::applyWebsitePolicies):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, WebsitePoliciesCustomNavigatorPlatform)):

Canonical link: https://commits.webkit.org/280038@main