Source/WebCore/page/LocalFrame.cpp
@@ -1340,6 +1340,13 @@ String LocalFrame::customUserAgentAsSiteSpecificQuirks() const
     return { };
 }
 
+String LocalFrame::customNavigatorPlatform() const
+{
+    if (RefPtr documentLoader = loader().activeDocumentLoader())
+        return documentLoader->customNavigatorPlatform();
+    return { };
+}
+
 OptionSet<AdvancedPrivacyProtections> LocalFrame::advancedPrivacyProtections() const
 {
     if (auto* documentLoader = loader().activeDocumentLoader())
